# matheaufgaben

./: .gitignore  README.md  matheaufgaben.py  matheaufgaben_20251221_223229.typ  pyproject.toml
